--- a/index.html
+++ b/index.html
@@ -47,10 +47,7 @@
 <header class="navigation fixed-top">
   <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <span class="logo-badge">🎉</span>
-      <span class="logo-text ml-2">
-        Fiestas <span>&</span> Dulces
-      </span>
+      <img src="images/tu-logo.png" alt="Fiestas & Dulces" class="logo-img">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
       aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
