--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <a class="dropdown-item" href="servicio-pinta-caritas.html">Pinta caritas</a>
           </div>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="about.html">Nosotros</a>
         </li>
         <li class="nav-item">
