--- a/servicio-postres.html
+++ b/servicio-postres.html
@@ -151,9 +151,9 @@
       <!-- 01 -->
       <div class="col-12 col-sm-6 col-lg-4 mb-4">
         <div class="gallery-card">
-          <a class="venobox" data-gall="postres" href="/images/postres/postre_01.jpeg" title="Postre #01">
+          <a class="venobox" data-gall="postres" href="images/postres/postre_01.jpeg" title="Postre #01">
             <div class="gallery-thumb">
-              <img src="/images/postres/postre_01.jpeg" alt="Postre 01">
+              <img src="images/postres/postre_01.jpeg" alt="Postre 01">
               <div class="gallery-overlay">
                 <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
               </div>
@@ -169,9 +169,9 @@
       <!-- 02 -->
       <div class="col-12 col-sm-6 col-lg-4 mb-4">
         <div class="gallery-card">
-          <a class="venobox" data-gall="postres" href="/images/postres/postre_02.jpeg" title="Postre #02">
+          <a class="venobox" data-gall="postres" href="images/postres/postre_02.jpeg" title="Postre #02">
             <div class="gallery-thumb">
-              <img src="/images/postres/postre_02.jpeg" alt="Postre 02">
+              <img src="images/postres/postre_02.jpeg" alt="Postre 02">
               <div class="gallery-overlay">
                 <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
               </div>
@@ -187,9 +187,9 @@
       <!-- 03 -->
       <div class="col-12 col-sm-6 col-lg-4 mb-4">
         <div class="gallery-card">
-          <a class="venobox" data-gall="postres" href="/images/postres/postre_03.jpeg" title="Postre #03">
+          <a class="venobox" data-gall="postres" href="images/postres/postre_03.jpeg" title="Postre #03">
             <div class="gallery-thumb">
-              <img src="/images/postres/postre_03.jpeg" alt="Postre 03">
+              <img src="images/postres/postre_03.jpeg" alt="Postre 03">
               <div class="gallery-overlay">
                 <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
               </div>
@@ -205,9 +205,9 @@
       <!-- 04 -->
       <div class="col-12 col-sm-6 col-lg-4 mb-4">
         <div class="gallery-card">
-          <a class="venobox" data-gall="postres" href="/images/postres/postre_04.jpeg" title="Postre #04">
+          <a class="venobox" data-gall="postres" href="images/postres/postre_04.jpeg" title="Postre #04">
             <div class="gallery-thumb">
-              <img src="/images/postres/postre_04.jpeg" alt="Postre 04">
+              <img src="images/postres/postre_04.jpeg" alt="Postre 04">
               <div class="gallery-overlay">
                 <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
               </div>
@@ -223,9 +223,9 @@
       <!-- 05 -->
       <div class="col-12 col-sm-6 col-lg-4 mb-4">
         <div class="gallery-card">
-          <a class="venobox" data-gall="postres" href="/images/postres/postre_05.jpeg" title="Postre #05">
+          <a class="venobox" data-gall="postres" href="images/postres/postre_05.jpeg" title="Postre #05">
             <div class="gallery-thumb">
-              <img src="/images/postres/postre_05.jpeg" alt="Postre 05">
+              <img src="images/postres/postre_05.jpeg" alt="Postre 05">
               <div class="gallery-overlay">
                 <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
               </div>
@@ -241,9 +241,9 @@
       <!-- 06 -->
       <div class="col-12 col-sm-6 col-lg-4 mb-4">
         <div class="gallery-card">
-          <a class="venobox" data-gall="postres" href="/images/postres/postre_06.jpeg" title="Postre #06">
+          <a class="venobox" data-gall="postres" href="images/postres/postre_06.jpeg" title="Postre #06">
             <div class="gallery-thumb">
-              <img src="/images/postres/postre_06.jpeg" alt="Postre 06">
+              <img src="images/postres/postre_06.jpeg" alt="Postre 06">
               <div class="gallery-overlay">
                 <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
               </div>
@@ -259,9 +259,9 @@
       <!-- 07 -->
       <div class="col-12 col-sm-6 col-lg-4 mb-4">
         <div class="gallery-card">
-          <a class="venobox" data-gall="postres" href="/images/postres/postre_07.jpeg" title="Postre #07">
+          <a class="venobox" data-gall="postres" href="images/postres/postre_07.jpeg" title="Postre #07">
             <div class="gallery-thumb">
-              <img src="/images/postres/postre_07.jpeg" alt="Postre 07">
+              <img src="images/postres/postre_07.jpeg" alt="Postre 07">
               <div class="gallery-overlay">
                 <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
               </div>
@@ -277,9 +277,9 @@
       <!-- 08 -->
       <div class="col-12 col-sm-6 col-lg-4 mb-4">
         <div class="gallery-card">
-          <a class="venobox" data-gall="postres" href="/images/postres/postre_08.jpeg" title="Postre #08">
+          <a class="venobox" data-gall="postres" href="images/postres/postre_08.jpeg" title="Postre #08">
             <div class="gallery-thumb">
-              <img src="/images/postres/postre_08.jpeg" alt="Postre 08">
+              <img src="images/postres/postre_08.jpeg" alt="Postre 08">
               <div class="gallery-overlay">
                 <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
               </div>
@@ -295,9 +295,9 @@
       <!-- 09 -->
       <div class="col-12 col-sm-6 col-lg-4 mb-4">
         <div class="gallery-card">
-          <a class="venobox" data-gall="postres" href="/images/postres/postre_09.jpeg" title="Postre #09">
+          <a class="venobox" data-gall="postres" href="images/postres/postre_09.jpeg" title="Postre #09">
             <div class="gallery-thumb">
-              <img src="/images/postres/postre_09.jpeg" alt="Postre 09">
+              <img src="images/postres/postre_09.jpeg" alt="Postre 09">
               <div class="gallery-overlay">
                 <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
               </div>
@@ -337,7 +337,7 @@
 
   // Destacados random (client-side) - cambia al recargar
   (function () {
-    const base = "/images/postres/";
+    const base = "images/postres/";
     const files = Array.from({ length: 9 }, (_, i) => {
       const n = String(i + 1).padStart(2, "0");
       return `postre_${n}.jpeg`;
@@ -385,3 +385,4 @@
 
 </body>
 </html>
+
