--- a/servicio-postres.html
+++ b/servicio-postres.html
@@ -160,8 +160,8 @@
             </div>
           </a>
           <div class="gallery-caption">
-            <strong>Postre #01</strong><br>
-            <small>Artesanal • Ideal para eventos</small>
+            <strong>Cupcakes Premium</strong><br>
+            <small>Perfectos para mesa de postres • Personalizables</small>
           </div>
         </div>
       </div>
@@ -178,8 +178,8 @@
             </div>
           </a>
           <div class="gallery-caption">
-            <strong>Postre #02</strong><br>
-            <small>Artesanal • Ideal para eventos</small>
+            <strong>Gelatina Especial</strong><br>
+            <small>Fresca y ligera • Ideal para eventos</small>
           </div>
         </div>
       </div>
@@ -196,8 +196,8 @@
             </div>
           </a>
           <div class="gallery-caption">
-            <strong>Postre #03</strong><br>
-            <small>Artesanal • Ideal para eventos</small>
+            <strong>Gelatinas Temáticas</strong><br>
+            <small>Colores y capas que sorprenden • Para fiestas</small>
           </div>
         </div>
       </div>
@@ -214,8 +214,8 @@
             </div>
           </a>
           <div class="gallery-caption">
-            <strong>Postre #04</strong><br>
-            <small>Artesanal • Ideal para eventos</small>
+            <strong>Carlotas Caseras</strong><br>
+            <small>Un clásico que siempre encanta • Pide tu charola</small>
           </div>
         </div>
       </div>
@@ -232,8 +232,8 @@
             </div>
           </a>
           <div class="gallery-caption">
-            <strong>Postre #05</strong><br>
-            <small>Artesanal • Ideal para eventos</small>
+            <strong>Gelatinas Personalizadas</strong><br>
+            <small>Tu temática, tu estilo • Diseño a elección</small>
           </div>
         </div>
       </div>
@@ -250,8 +250,8 @@
             </div>
           </a>
           <div class="gallery-caption">
-            <strong>Postre #06</strong><br>
-            <small>Artesanal • Ideal para eventos</small>
+            <strong>Tarta Individual</strong><br>
+            <small>Elegante para eventos • Presentación top</small>
           </div>
         </div>
       </div>
@@ -268,8 +268,8 @@
             </div>
           </a>
           <div class="gallery-caption">
-            <strong>Postre #07</strong><br>
-            <small>Artesanal • Ideal para eventos</small>
+            <strong>Tarta Gourmet</strong><br>
+            <small>Ideal para compartir • Sabor que luce</small>
           </div>
         </div>
       </div>
@@ -286,8 +286,8 @@
             </div>
           </a>
           <div class="gallery-caption">
-            <strong>Postre #08</strong><br>
-            <small>Artesanal • Ideal para eventos</small>
+            <strong>Edición Tricolor</strong><br>
+            <small>Perfecta para celebraciones • Muy fotogénica</small>
           </div>
         </div>
       </div>
@@ -304,8 +304,8 @@
             </div>
           </a>
           <div class="gallery-caption">
-            <strong>Postre #09</strong><br>
-            <small>Artesanal • Ideal para eventos</small>
+            <strong>Mini Tarta Artesanal</strong><br>
+            <small>Tradición con estilo • Ideal para regalo</small>
           </div>
         </div>
       </div>
@@ -385,4 +385,5 @@
 
 </body>
 </html>
+
 
