--- a/about.html
+++ b/about.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
-
 <html lang="es">
 
 <head>
   <meta charset="utf-8">
-  <title>Nosotros | Fiestas & Dulces</title>
+  <title>Nosotros | Cosmos Arte y Sabor</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <!-- ** Plugins Needed for the Project ** -->
-  <!-- Bootstrap -->
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-  <!-- slick slider -->
   <link rel="stylesheet" href="plugins/slick/slick.css">
-  <!-- themefy-icon -->
   <link rel="stylesheet" href="plugins/themify-icons/themify-icons.css">
-  <!-- venobox css -->
   <link rel="stylesheet" href="plugins/venobox/venobox.css">
-  <!-- card slider -->
   <link rel="stylesheet" href="plugins/card-slider/css/style.css">
 
   <!-- Main Stylesheet -->
@@ -28,7 +22,6 @@
   <!--Favicon-->
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-
 </head>
 
 <body>
@@ -41,7 +34,7 @@
     <div class="row">
       <div class="col-12 text-center">
         <h1 class="display-1 text-white font-weight-bold font-primary">
-          Sobre Fiestas & Dulces
+          Sobre Cosmos
         </h1>
       </div>
     </div>
@@ -54,19 +47,23 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6 mb-4 mb-lg-0">
-        <img src="images/about/about-us.png" alt="Nosotros" class="img-fluid rounded-lg shadow">
+        <img src="images/about/about-us.png" alt="Cosmos Arte y Sabor" class="img-fluid rounded-lg shadow">
       </div>
       <div class="col-md-6 col-lg-5">
         <h2 class="section-title mb-3">Quiénes somos</h2>
         <p class="lead">
-          Fiestas & Dulces nace con la idea de hacer más fáciles y especiales tus eventos:
-          tú disfrutas, nosotros nos encargamos del ambiente, lo dulce y la diversión.
+          <strong>Cosmos Arte y Sabor</strong> (Cosmos) es un proyecto familiar que mezcla lo mejor de dos mundos:
+          <strong>detalle artesanal</strong> y <strong>presentación bonita</strong> para que tu evento se sienta único.
         </p>
         <p>
-          Trabajamos principalmente en la ciudad de Puebla y alrededores, en eventos pequeños y familiares:
-          cumpleaños, reuniones, bautizos y fiestas infantiles. Nuestra combinación de
-          <strong>canto en vivo, mesas de dulces, snacks, postres y pinta caritas</strong>
-          crea una experiencia completa para tus invitados.
+          Nos encanta crear cosas que se ven increíbles y saben mejor: postres, mesas dulces y arreglos para mesa principal,
+          siempre cuidando color, temática y estilo. Si tu evento tiene personajes, una paleta específica o una idea muy marcada,
+          <strong>nos adaptamos</strong> para que todo se sienta “armado en conjunto”.
+        </p>
+        <p class="mb-0">
+          Trabajamos principalmente en <strong>Puebla</strong> y alrededores, en eventos pequeños y familiares:
+          cumpleaños, reuniones, bautizos y fiestas infantiles. Aquí la idea es simple:
+          <strong>tú disfrutas</strong>, nosotros nos encargamos de que se vea y se viva bonito.
         </p>
       </div>
     </div>
@@ -81,8 +78,9 @@
       <div class="col-lg-10 mx-auto text-center">
         <h2 class="section-title">Cómo trabajamos</h2>
         <p class="lead">
-          Nos enfocamos en eventos de fin de semana, con atención cercana y organizada.
-          Preferimos pocos eventos bien hechos, a muchos “a las carreras”.
+          En Cosmos preferimos hacer pocos eventos a la vez, pero hacerlos bien:
+          con planificación, buena comunicación y detalles cuidados. La meta es que todo se vea “wow”
+          sin que tú te estés preocupando por mil cosas.
         </p>
         <div class="section-border"></div>
       </div>
@@ -92,11 +90,11 @@
       <div class="col-md-4 mb-4">
         <div class="card hover-bg-secondary shadow-sm h-100 py-4">
           <div class="card-body text-center">
-            <i class="icon-lg icon-box bg-gradient-primary rounded-circle ti-heart text-white mb-4"></i>
-            <h4 class="mb-3">Trato cercano</h4>
+            <i class="icon-lg icon-box bg-gradient-primary rounded-circle ti-comment-alt text-white mb-4"></i>
+            <h4 class="mb-3">Diseño a tu estilo</h4>
             <p class="mb-0">
-              Hablamos contigo por WhatsApp para entender tu idea, tipo de evento, número de invitados
-              y el estilo que quieres lograr.
+              Te pedimos lo esencial (fecha, temática/colores y tipo de evento) y con eso armamos una propuesta clara:
+              que combine <strong>estética</strong>, <strong>ambiente</strong> y <strong>presupuesto</strong>.
             </p>
           </div>
         </div>
@@ -105,11 +103,12 @@
       <div class="col-md-4 mb-4">
         <div class="card hover-bg-secondary shadow-sm h-100 py-4">
           <div class="card-body text-center">
-            <i class="icon-lg icon-box bg-gradient-primary rounded-circle ti-layout-grid3 text-white mb-4"></i>
-            <h4 class="mb-3">Paquetes a tu medida</h4>
+            <i class="icon-lg icon-box bg-gradient-primary rounded-circle ti-brush-alt text-white mb-4"></i>
+            <h4 class="mb-3">Hecho a mano</h4>
             <p class="mb-0">
-              Combinamos servicios: canto, postres, mesas de dulces, snacks y pinta caritas,
-              para armar un paquete que se ajuste a tu presupuesto.
+              Nos enfocamos en lo artesanal: postres, decoraciones y detalles con intención.
+              Nada de “copiar/pegar”; buscamos que tu mesa y tu montaje se sientan
+              <strong>personalizados</strong>.
             </p>
           </div>
         </div>
@@ -118,12 +117,35 @@
       <div class="col-md-4 mb-4">
         <div class="card hover-bg-secondary shadow-sm h-100 py-4">
           <div class="card-body text-center">
-            <i class="icon-lg icon-box bg-gradient-primary rounded-circle ti-check text-white mb-4"></i>
-            <h4 class="mb-3">Puntualidad y detalles</h4>
+            <i class="icon-lg icon-box bg-gradient-primary rounded-circle ti-check-box text-white mb-4"></i>
+            <h4 class="mb-3">Montaje sin estrés</h4>
             <p class="mb-0">
-              Llegamos con tiempo para montar todo y dejar listo antes de que empiece tu evento,
-              cuidando la presentación y los detalles.
+              Llegamos con tiempo para preparar y montar, cuidando que todo quede bien presentado.
+              Nos gusta entregar <strong>limpio</strong>, <strong>puntual</strong> y listo para fotos.
             </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Bloque extra (ligero) para aterrizar lo que hacen -->
+    <div class="row mt-4">
+      <div class="col-lg-10 mx-auto">
+        <div class="card shadow-sm p-4">
+          <div class="row align-items-center">
+            <div class="col-md-8">
+              <h4 class="mb-2">¿Qué hacemos con más frecuencia?</h4>
+              <p class="mb-0">
+                <strong>Postres y repostería</strong>, <strong>mesas dulces</strong>, <strong>snacks</strong> y
+                <strong>arreglos de mesa / backdrops</strong> para mesa principal.
+                Nos enfocamos en detalles para mesas, sillas, paredes y rincones (no decoración completa de salón).
+              </p>
+            </div>
+            <div class="col-md-4 text-md-right mt-3 mt-md-0">
+              <a href="https://wa.me/522226763338" class="btn btn-primary" target="_blank">
+                Cotiza por WhatsApp
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -132,7 +154,6 @@
   </div>
 </section>
 <!-- /Misión -->
-
 
 <div id="site-footer"></div>
 
@@ -152,9 +173,6 @@
 <script src="plugins/counto/counTo.js"></script>
 <!-- card slider -->
 <script src="plugins/card-slider/js/card-slider-min.js"></script>
-<!-- google map (puedes quitarlo si no lo usas en ninguna parte) -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU&libraries=places"></script>
-<script src="plugins/google-map/gmap.js"></script>
 
 <!-- Main Script -->
 <script src="js/script.js"></script>
