--- a/servicio-postres.html
+++ b/servicio-postres.html
@@ -99,11 +99,18 @@
 
         <h4 class="mt-4">Opciones disponibles</h4>
         <ul class="list-unstyled">
-          <li>• Mini postres individuales (cheesecake, pay, mousse).</li>
+          <li>• Postres individuales</li>
+          <ul class="list-unstyled">
+            <li>- Cheesecake</li>
+            <li>- Tartas de crema y fruta</li>
+            <li>- Carlotas de fruta</li>
+          </ul>
           <li>• Cupcakes decorados a juego con tu temática.</li>
-          <li>• Shots dulces (oreo, mazapán, limón, caramelo).</li>
-          <li>• Galletas decoradas.</li>
-          <li>• Brownies, blondies y panqués caseros.</li>
+          <li>• Gelatinas de acuerdo al color y temática del evento.</li>
+          <li>• Panqué de plátano.</li>
+          <li>• Chocoflan.</li>
+          <li>• Brazo gitano.</li>
+          <li>... Entre muchas otras opciones.</li>
         </ul>
 
         <h4 class="mt-4">Personalización</h4>
@@ -385,5 +392,6 @@
 
 </body>
 </html>
+
 
 
