--- a/servicio-canto.html
+++ b/servicio-canto.html
@@ -1,34 +1,57 @@
 <!DOCTYPE html>
-
 <html lang="es">
-
 <head>
   <meta charset="utf-8">
-  <title>Canto en vivo | Fiestas & Dulces</title>
+  <title>Canto en vivo | Cosmos Arte y Sabor</title>
 
-  <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <!-- ** Plugins Needed for the Project ** -->
-  <!-- Bootstrap -->
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-  <!-- slick slider -->
   <link rel="stylesheet" href="plugins/slick/slick.css">
-  <!-- themefy-icon -->
   <link rel="stylesheet" href="plugins/themify-icons/themify-icons.css">
-  <!-- venobox css -->
   <link rel="stylesheet" href="plugins/venobox/venobox.css">
-  <!-- card slider -->
   <link rel="stylesheet" href="plugins/card-slider/css/style.css">
-
-  <!-- Main Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!--Favicon-->
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
+  <style>
+    /* Estilos ligeros para que se vea pro sin romper tu template */
+    .media-card{
+      border-radius: 14px;
+      overflow: hidden;
+      background: #fff;
+      box-shadow: 0 10px 28px rgba(0,0,0,.08);
+    }
+    .media-card img{
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    .badge-soft{
+      display: inline-block;
+      padding: 6px 10px;
+      border-radius: 999px;
+      background: rgba(0,0,0,.06);
+      font-size: 12px;
+      margin-right: 8px;
+      margin-bottom: 8px;
+    }
+    .video-wrap{
+      border-radius: 14px;
+      overflow: hidden;
+      box-shadow: 0 10px 28px rgba(0,0,0,.08);
+      background: #000;
+    }
+    .video-wrap video{
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    .mini-list li{ margin-bottom: 8px; }
+  </style>
 </head>
 
 <body>
@@ -50,31 +73,52 @@
 <!-- service detail -->
 <section class="section">
   <div class="container">
+
     <div class="row mb-5">
       <div class="col-lg-8">
-        <h2 class="section-title">Canto en vivo</h2>
+        <h2 class="section-title">Juan Santos • Canto en vivo</h2>
+
+        <div class="mb-3">
+          <span class="badge-soft">🎤 Música en vivo</span>
+          <span class="badge-soft">✨ Ambiente con luces</span>
+          <span class="badge-soft">🎶 Repertorio a tu gusto</span>
+          <span class="badge-soft">🏡 Ideal para eventos familiares</span>
+        </div>
+
         <p class="lead">
-          Música en vivo para darle vida a tus fiestas. Repertorio versátil que podemos adaptar al tipo de evento:
-          infantil, familiar o algo más romántico.
+          Si quieres que tu evento se sienta <strong>más alegre</strong>, <strong>más emocionante</strong> y con “momento show”,
+          el canto en vivo lo cambia todo. Me adapto al estilo de tu fiesta: desde ambiente para convivir
+          hasta canciones para cantar con tus invitados.
         </p>
+
         <p>
-          Llevamos todo el equipo de audio necesario para espacios pequeños y medianos, ideal para
-          reuniones en casa, salones de eventos y terrazas.
+          Llevo equipo para espacios pequeños y medianos (casa, terraza, salón). Tú me dices el vibe:
+          <strong>fiesta</strong>, <strong>romántico</strong> o <strong>baladas clásicas</strong>… y lo armamos.
         </p>
+
         <h4 class="mt-4">¿Qué incluye?</h4>
-        <ul class="list-unstyled">
-          <li>• Presentación de canto en vivo por bloques de tiempo (ej. 1, 2 o 3 horas).</li>
-          <li>• Equipo de audio básico (bocinas, micrófono, consola).</li>
-          <li>• Repertorio acordado previamente contigo (puedes sugerir canciones).</li>
-          <li>• Dinámicas ligeras con los invitados si lo deseas.</li>
+        <ul class="list-unstyled mini-list">
+          <li>• Presentación por bloques de tiempo (ej. 1, 2 o 3 horas).</li>
+          <li>• Equipo de audio para evento (bocinas, micro, consola).</li>
+          <li>• Repertorio acordado contigo (puedes pedir canciones).</li>
+          <li>• Pausas con música ambientación entre bloques (si aplica).</li>
+          <li>• Opción de ambiente con luces de colores (según el lugar).</li>
         </ul>
+
         <h4 class="mt-4">Ideal para</h4>
-        <ul class="list-unstyled">
-          <li>• Cumpleaños.</li>
-          <li>• Fiestas familiares.</li>
-          <li>• Despedidas, reuniones íntimas o cenas especiales.</li>
+        <ul class="list-unstyled mini-list">
+          <li>• Cumpleaños / fiestas familiares.</li>
+          <li>• Reuniones en casa y cenas especiales.</li>
+          <li>• Sorpresas, aniversarios y momentos románticos.</li>
+          <li>• Eventos pequeños que quieren algo “diferente” sin complicarse.</li>
         </ul>
+
+        <div class="alert alert-light mt-4 mb-0" role="alert">
+          <strong>Tip:</strong> Si me dices tu temática y el tipo de invitados, te sugiero un mini set ideal:
+          “para ambientar”, “para bailar” y “para cerrar con broche de oro”.
+        </div>
       </div>
+
       <div class="col-lg-4">
         <div class="card shadow p-4">
           <h4 class="mb-3">Paquetes de ejemplo</h4>
@@ -84,12 +128,63 @@
             <li class="mb-2"><strong>Paquete Premium:</strong> 3 horas de canto en vivo + pausas musicales entre bloques.</li>
           </ul>
           <p class="small mb-3">
-            Los precios pueden variar según duración, ubicación y fecha. Contáctame para una cotización personalizada.
+            Los precios varían según duración, ubicación y fecha. Escríbeme y te paso opciones rápido.
           </p>
-          <a href="contact.html" class="btn btn-primary btn-block">Pedir cotización</a>
+
+          <a href="https://wa.me/522226763338" class="btn btn-primary btn-block" target="_blank">Cotizar por WhatsApp</a>
+          <a href="contact.html" class="btn btn-outline-primary btn-block">Ir a Contacto</a>
         </div>
       </div>
     </div>
+
+    <!-- IMÁGENES (2) -->
+    <div class="row mb-5">
+      <div class="col-lg-6 mb-4 mb-lg-0">
+        <div class="media-card">
+          <!-- Cambia el src por tu imagen con nombre/numero -->
+          <img src="images/canto/juan_santos_fiestas.jpg" alt="Juan Santos - Canto en vivo para fiestas">
+        </div>
+        <p class="small mt-2 mb-0">Para fiestas, convivios y ambiente con invitados.</p>
+      </div>
+
+      <div class="col-lg-6">
+        <div class="media-card">
+          <!-- Cambia el src por tu imagen sepia -->
+          <img src="images/canto/juan_santos_baladas_sepia.jpg" alt="Juan Santos - Baladas clásicas en vivo">
+        </div>
+        <p class="small mt-2 mb-0">Baladas clásicas para un momento romántico y sentimental.</p>
+      </div>
+    </div>
+
+    <!-- VIDEO SETUP -->
+    <div class="row">
+      <div class="col-lg-10 mx-auto">
+        <div class="row align-items-end mb-3">
+          <div class="col-md-8">
+            <h2 class="section-title mb-0">Así se ve el setup</h2>
+            <p class="mb-0">Un vistazo rápido al audio y luces de colores para ambientar.</p>
+          </div>
+          <div class="col-md-4 text-md-right mt-3 mt-md-0">
+            <a href="https://wa.me/522226763338" class="btn btn-outline-primary" target="_blank">
+              <i class="ti-comment-alt mr-2"></i> Preguntar disponibilidad
+            </a>
+          </div>
+        </div>
+
+        <div class="video-wrap">
+          <!-- Opción 1: video local (MP4) -->
+          <video controls playsinline preload="metadata" poster="images/canto/video-poster.jpg">
+            <source src="videos/setup-luces.mp4" type="video/mp4">
+            Tu navegador no soporta video HTML5.
+          </video>
+        </div>
+
+        <p class="small mt-2 mb-0">
+          *Si prefieres, también puedo dejar el video como link de YouTube embebido (se ve más ligero en GitHub Pages).
+        </p>
+      </div>
+    </div>
+
   </div>
 </section>
 <!-- /service detail -->
