--- a/servicio-canto.html
+++ b/servicio-canto.html
@@ -121,14 +121,14 @@
 
       <div class="col-lg-4">
         <div class="card shadow p-4">
-          <h4 class="mb-3">Paquetes de ejemplo</h4>
+          <h4 class="mb-3">Precios base</h4>
           <ul class="list-unstyled small">
-            <li class="mb-2"><strong>Paquete Básico:</strong> 1 hora de canto en vivo.</li>
-            <li class="mb-2"><strong>Paquete Fiesta:</strong> 2 horas de canto en vivo + ambientación musical.</li>
-            <li class="mb-2"><strong>Paquete Premium:</strong> 3 horas de canto en vivo + pausas musicales entre bloques.</li>
+            <li class="mb-2"><strong>1 hora de canto en vivo:</strong> $1000 (MXN).</li>
+            <li class="mb-2"><strong>2 hora de canto en vivo:</strong> $1800 (MXN).</li>
+            <li class="mb-2"><strong>3 hora de canto en vivo:</strong> $2500 (MXN).</li>
           </ul>
           <p class="small mb-3">
-            Los precios varían según duración, ubicación y fecha. Escríbeme y te paso opciones rápido.
+            Los precios varían según duración, ubicación y fecha. Escríbeme y te paso opciones.
           </p>
 
           <a href="https://wa.me/522226763338" class="btn btn-primary btn-block" target="_blank">Cotizar por WhatsApp</a>
@@ -164,11 +164,6 @@
             <h2 class="section-title mb-0">Así se ve el setup</h2>
             <p class="mb-0">Un vistazo rápido al audio y luces de colores para ambientar.</p>
           </div>
-          <div class="col-md-4 text-md-right mt-3 mt-md-0">
-            <a href="https://wa.me/522226763338" class="btn btn-outline-primary" target="_blank">
-              <i class="ti-comment-alt mr-2"></i> Preguntar disponibilidad
-            </a>
-          </div>
         </div>
 
         <div class="video-wrap">
@@ -178,10 +173,6 @@
             Tu navegador no soporta video HTML5.
           </video>
         </div>
-
-        <p class="small mt-2 mb-0">
-          *Si prefieres, también puedo dejar el video como link de YouTube embebido (se ve más ligero en GitHub Pages).
-        </p>
       </div>
     </div>
 
@@ -203,3 +194,4 @@
 
 </body>
 </html>
+
